Fix top spacing on secondary panes with big computer component
[Finishes #76822880]

--- a/src/pivotal-ui/components/pane.css.scss
+++ b/src/pivotal-ui/components/pane.css.scss
@@ -53,7 +53,7 @@ one on the `.container` element will be constrained to the content width.
     }
   }
   &+ .pane .container {
-    padding-top: $pane-offset-xs;
+    padding-top: 2 * $pane-offset-xs;
   }
 }
 
@@ -63,7 +63,7 @@ one on the `.container` element will be constrained to the content width.
       margin-bottom: -$pane-offset-sm;
     }
     &+ .pane .container {
-      padding-top: $pane-offset-sm;
+      padding-top: 1.5 * $pane-offset-sm;
     }
   }
 }
@@ -74,7 +74,7 @@ one on the `.container` element will be constrained to the content width.
       margin-bottom: -$pane-offset-md;
     }
     &+ .pane .container {
-      padding-top: $pane-offset-md;
+      padding-top: 1.5 * $pane-offset-md;
     }
   }
 }
